<resources>
    <string name="app_name">shopping-list</string>
    <string name="add_item">Add Item</string>
    <string name="nuts">nuts</string>
    <string name="pea">pea</string>
    <string name="beans">beans</string>
    <string name="cucumber">cucumber</string>
    <string name="garlic">garlic</string>
    <string name="salad">salad</string>
    <string name="vegetables">vegetables</string>
    <string name="meat">meat</string>
    <string name="chicken">chicken</string>
    <string name="cheese">cheese</string>
    <string name="toilet_paper">toilet paper</string>
    <string name="bread">bread</string>
    <string name="fish">fish</string>
    <string name="chocolate">chocolate</string>
    <string name="milk">MILK</string>
    <string name="open_location">Open Location</string>
    <string name="les_quatre_temps">Les Quatre Temps Auchan</string>
</resources>
