<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommonShoppingList">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/milk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/milk"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:onClick="buildList"/>

            <Button
                android:id="@+id/chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/fish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fish"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/bread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/toilet_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toilet_paper"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/cheese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cheese"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/chicken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/chicken"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/meat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/vegetables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vegetables"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/salad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salad"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/garlic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/garlic"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/cucumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cucumber"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/beans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beans"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/pea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pea"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/nuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nuts"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
